--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,9 +6,10 @@ cache:
     - vendor/
 
 before_script:
+  - echo deb http://pubmirrors.dal.corespace.com/debian/ stretch main > /etc/apt/sources.list
+  - apt-get update -y && apt-get install unzip -y
   - curl -o protoc.zip -sL https://github.com/google/protobuf/releases/download/v3.5.1/protoc-3.5.1-linux-x86_64.zip
   - unzip protoc.zip -d /protoc
-  - echo deb http://pubmirrors.dal.corespace.com/debian/ stretch main > /etc/apt/sources.list
   - ln -s /builds /go/src/jba.io
   - cd /go/src/jba.io/go/gorram
   - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
