--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,8 +39,12 @@ build-my-project:
   script:
     - curl -o dep -sL https://github.com/golang/dep/releases/download/v0.4.1/dep-linux-amd64
     - chmod +x dep
-    - ./dep ensure
-    - go generate    
+    - cd server
+    - ../dep ensure
+    - cd ../checks
+    - ../dep ensure
+    - cd ../
+    - go generate
     - go get -d
     - go build jba.io/go/gorram/server -o ./gorram-server
     - go build jba.io/go/gorram/client -o ./gorram-client
