--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,14 +10,15 @@ before_script:
   - apt-get update -y && apt-get install unzip -y
   - curl -o protoc.zip -sL https://github.com/google/protobuf/releases/download/v3.5.1/protoc-3.5.1-linux-x86_64.zip
   - unzip protoc.zip -d /protoc
+  - export PATH=$PATH:/protoc/bin:$GOPATH/bin
   - ln -s /builds /go/src/jba.io
   - cd /go/src/jba.io/go/gorram
-  - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
-  - eval $(ssh-agent -s)
-  - ssh-add <(echo "$SSH_PRIVATE_KEY")
-  - mkdir -p ~/.ssh
-  - '[[ -f /.dockerenv ]] && echo "$SSH_SERVER_HOSTKEYS" > ~/.ssh/known_hosts'
-  - export PATH=$PATH:/protoc/bin:$GOPATH/bin
+  #- 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
+  #- eval $(ssh-agent -s)
+  #- ssh-add <(echo "$SSH_PRIVATE_KEY")
+  #- mkdir -p ~/.ssh
+  #- '[[ -f /.dockerenv ]] && echo "$SSH_SERVER_HOSTKEYS" > ~/.ssh/known_hosts'
+
 
 stages:
   - install-environment
