--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,8 +11,8 @@ before_script:
   - curl -o protoc.zip -sL https://github.com/google/protobuf/releases/download/v3.5.1/protoc-3.5.1-linux-x86_64.zip
   - unzip protoc.zip -d /protoc
   - export PATH=$PATH:/protoc/bin:$GOPATH/bin
-  - ln -s /builds /go/src/jba.io
-  - cd /go/src/jba.io/go/gorram
+  - ln -s /builds /go/src/git.jba.io
+  - cd /go/src/git.jba.io/go/gorram
   #- 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
   #- eval $(ssh-agent -s)
   #- ssh-add <(echo "$SSH_PRIVATE_KEY")
@@ -52,8 +52,8 @@ build-my-project:
     - go get -u github.com/golang/protobuf/protoc-gen-go
     - go generate
     - go get -d
-    - go build -o ./gorram-server jba.io/go/gorram/server
-    - go build -o ./gorram-client jba.io/go/gorram/client
+    - go build -o ./gorram-server git.jba.io/go/gorram/server
+    - go build -o ./gorram-client git.jba.io/go/gorram/client
   artifacts:
     expire_in: 1 day
     paths:
