Try to disable cache entirely

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,6 @@
 image: golang:latest
 
-cache:
-  key: "$CI_COMMIT_REF_NAME"
-  paths:
-    - vendor/
+cache: {}
 
 before_script:
   - echo deb http://deb.debian.org/debian/ stretch main > /etc/apt/sources.list
