Revert "Try to disable cache entirely"
This reverts commit c818489955d45b86984e254802bf5e4818814b7b.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,9 @@
 image: golang:latest
 
-cache: {}
+cache:
+  key: "$CI_COMMIT_REF_NAME"
+  paths:
+    - vendor/
 
 before_script:
   - echo deb http://deb.debian.org/debian/ stretch main > /etc/apt/sources.list
