Kinda merge config-file branch. - Added build-package to CI pipeline - Add viper config stuff

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,6 +60,15 @@ build-my-project:
       - gorram-server
       - gorram-client
 
+build-package:
+  stage: package
+  script:
+    - apt update && apt install -y build-essential devscripts debhelper
+    - cp gorram-client debian/
+    - cp gorram-server debian/    
+    - cd debian/
+    - debuild -us -uc -b  
+
 test-server:
   stage: test
   coverage: '/coverage: \d+\.\d+/'
