--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ stages:
   - build
   - test  
   - package
-#  - deploy  
+  - deploy  
 
 install-go:
   stage: install-environment
@@ -85,16 +85,33 @@ build-package:
     - cp gorram-client client/deb/
     - cp gorram-server server/deb/
     - cd server/deb/
-    - dch -m -i "New version from Git" && dch -r -D stretch ""
+    - dch -M -v 1.0-$CI_COMMIT_REF_NAME-$CI_JOB_ID "New version from Git" && dch -M -r -D stretch ""
     - debuild -us -uc -b
     - cd ../../client/deb/
-    - dch -m -i "New version from Git" && dch -r -D stretch ""
+    - dch -M -v 1.0-$CI_COMMIT_REF_NAME-$CI_JOB_ID "New version from Git" && dch -M -r -D stretch ""
     - debuild -us -uc -b
+    - cd ../../ && mv client/gorram-client_*.deb client/gorram-client.deb && mv server/gorram-server_*.deb server/gorram-server.deb
   artifacts:
     expire_in: 1 day
     paths:
-      - client/*.deb
-      - server/*.deb
+      - client/gorram-client.deb
+      - server/gorram-server.deb
+
+#deploy_to_repo:
+#  stage: deploy
+#  variables:
+#    DEPLOY_HOST: 'repo@bob.jba.io'
+#  script:
+#    - scp ./client/gorram-client.deb ./server/gorram-server.deb $DEPLOY_HOST:/home/repo/
+#    - ssh $DEPLOY_HOST reprepro -b www/debian/ includedeb stretch *.deb
+
+deploy_to_repo:
+  stage: deploy
+  variables:
+    DEPLOY_HOST: 'deploy@bob.jba.io'
+  script:
+    - scp ./client/gorram-client.deb ./server/gorram-server.deb $DEPLOY_HOST:/home/deploy/
+    - ssh $DEPLOY_HOST sudo dpkg -i gorram-server.deb gorram-client.deb
 
 #deploy_prod:
 #  stage: deploy
