--- a/client/Gopkg.toml
+++ b/client/Gopkg.toml
@@ -1,4 +1,3 @@
-
 # Gopkg.toml example
 #
 # Refer to https://github.com/golang/dep/blob/master/docs/Gopkg.toml.md
@@ -17,19 +16,24 @@
 #   source = "github.com/myfork/project2"
 #
 # [[override]]
-#  name = "github.com/x/y"
-#  version = "2.4.0"
+#   name = "github.com/x/y"
+#   version = "2.4.0"
+#
+# [prune]
+#   non-go = false
+#   go-tests = true
+#   unused-packages = true
 
-ignored = ["git.jba.io/go/gorram/proto", "google.golang.org/grpc*"]
+ignored = ["git.jba.io/go/gorram"]
 
 [[constraint]]
   name = "github.com/pelletier/go-toml"
   version = "1.2.0"
 
 [[constraint]]
-  version = "1.4.7"
-  name = "github.com/fsnotify/fsnotify"
+  name = "google.golang.org/grpc"
+  version = "1.19.1"
 
-#[[constraint]]
-#  name = "google.golang.org/grpc"
-#  version = "1.19.1"
+[prune]
+  go-tests = true
+  unused-packages = true
