--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ cache:
     - vendor/
 
 before_script:
-  - echo deb http://deb.debian.org/debian/ stretch main > /etc/apt/sources.list
+  - echo deb http://deb.debian.org/debian/ stable main > /etc/apt/sources.list
   - apt-get update -y && apt-get install unzip -y
   - curl -o protoc.zip -sL https://github.com/protocolbuffers/protobuf/releases/download/v3.6.1/protoc-3.6.1-linux-x86_64.zip
   - unzip protoc.zip -d /protoc
@@ -18,7 +18,6 @@ before_script:
   #- ssh-add <(echo "$SSH_PRIVATE_KEY")
   #- mkdir -p ~/.ssh
   #- '[[ -f /.dockerenv ]] && echo "$SSH_SERVER_HOSTKEYS" > ~/.ssh/known_hosts'
-
 
 stages:
   - install-environment
@@ -39,7 +38,7 @@ install-go:
 build-my-project:
   stage: build
   script:
-    - curl -o dep -sL https://github.com/golang/dep/releases/download/v0.4.1/dep-linux-amd64
+    - curl -o dep -sL https://github.com/golang/dep/releases/download/v0.5.4/dep-linux-amd64
     - chmod +x dep
     - cd server
     - ../dep ensure
