--- a/.drone.yml
+++ b/.drone.yml
@@ -101,14 +101,16 @@ steps:
     - ssh deploy@rick.jba.io sudo dpkg -i gorram-client.deb  
 
 - name: notify
-  image: plugins/matrix
+  image: plugins/pushover
   settings:
-    homeserver: https://squanch.space
-    roomid: WJRHcFjDqYlolDerNY:squanch.space
-    username:
-      from_secret: matrix_username
-    password:
-      from_secret: matrix_password
+    user:
+      from_secret: pushover_user
+    token:
+      from_secret: pushover_token
+  when:
+    status:
+    - success
+    - failure
 
 volumes:
   - name: deps
