--- a/.drone.yml
+++ b/.drone.yml
@@ -72,15 +72,9 @@ steps:
   pull: never
   image: deb-pkg
   commands: 
-    - cp gorram-client client/
-    - cp gorram-server server/
-    - cd server/
     - dch -M -v 1.0-$DRONE_COMMIT_BRANCH-$DRONE_BUILD_NUMBER "New version from Git" && dch -M -r -D buster ""
     - debuild -us -uc -b
-    - cd ../client/
-    - dch -M -v 1.0-$DRONE_COMMIT_BRANCH-$DRONE_BUILD_NUMBER "New version from Git" && dch -M -r -D buster ""
-    - debuild -us -uc -b
-    - cd ../ && mv gorram-client_*.deb client/gorram-client.deb && mv gorram-server_*.deb server/gorram-server.deb
+    - mv ../gorram_*.deb ./gorram.deb
 
 - name: deploy
   image: alpine
