Deploy singe debian pkg

--- a/.drone.yml
+++ b/.drone.yml
@@ -107,10 +107,10 @@ steps:
     - apk add --no-cache openssh
     - ssh-keyscan -H bob.jba.io > $HOME/.ssh/known_hosts
     - ssh-keyscan -H rick.jba.io >> $HOME/.ssh/known_hosts
-    - scp ./client/gorram-client.deb ./server/gorram-server.deb deploy@bob.jba.io:/home/deploy/
-    - ssh deploy@bob.jba.io sudo dpkg -i gorram-server.deb gorram-client.deb
-    - scp ./client/gorram-client.deb deploy@rick.jba.io:/home/deploy/
-    - ssh deploy@rick.jba.io sudo dpkg -i gorram-client.deb  
+    - scp ./gorram.deb deploy@bob.jba.io:/home/deploy/
+    - ssh deploy@bob.jba.io sudo dpkg -i gorram.deb
+    - scp ./gorram.deb deploy@rick.jba.io:/home/deploy/
+    - ssh deploy@rick.jba.io sudo dpkg -i gorram.deb  
 
 - name: notify
   image: plugins/pushover
