--- a/.drone.yml
+++ b/.drone.yml
@@ -90,7 +90,7 @@ steps:
   pull: never
   image: deb-pkg
   commands: 
-    - dch -M -v 1.0-$DRONE_COMMIT_BRANCH-$DRONE_BUILD_NUMBER "New version from Git" && dch -M -r -D buster ""
+    - dch -M -v 1.0-$DRONE_BUILD_STARTED-$DRONE_COMMIT_BRANCH "New version from Git" && dch -M -r -D buster ""
     - debuild -us -uc -b
     - mv ../gorram_*.deb ./gorram.deb
 
@@ -123,6 +123,22 @@ steps:
     - ssh-keyscan -H rick.jba.io > $HOME/.ssh/known_hosts
     - scp ./gorram.deb deploy@rick.jba.io:/home/deploy/
     - ssh deploy@rick.jba.io sudo dpkg -i gorram.deb  
+
+  - name: deploy to repo
+    image: alpine
+    environment:
+      DEPLOY_HOST: 'repo@bob.jba.io'
+      SSH_KEY:
+        from_secret: ssh_key    
+    commands:
+    - mkdir $HOME/.ssh
+    - echo "$SSH_KEY" > $HOME/.ssh/id_ed25519
+    - chmod 600 $HOME/.ssh/id_ed25519
+    - apk add --no-cache openssh
+    - ssh-keyscan -H bob.jba.io > $HOME/.ssh/known_hosts  
+    - ssh-keyscan -H git.jba.io >> $HOME/.ssh/known_hosts     
+    - scp gorram.deb $DEPLOY_HOST:/home/repo/gorram.deb
+    - ssh $DEPLOY_HOST reprepro -b www/debian/ includedeb buster gorram.deb 
 
 - name: notify
   image: plugins/pushover
