Fix up debian packaging

--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: gorram
 Section: admin
 Priority: optional
-Maintainer: aqtrans <aqtrans@jba.io>
+Maintainer: Jordan Anderson <aqtrans@jba.io>
 Homepage: https://git.jba.io/go/gorram
 
 Package: gorram
