--- a/.drone.yml
+++ b/.drone.yml
@@ -124,21 +124,21 @@ steps:
     - scp ./gorram.deb deploy@rick.jba.io:/home/deploy/
     - ssh deploy@rick.jba.io sudo dpkg -i gorram.deb  
 
-- name: deploy to repo
-  image: alpine
-  environment:
-    DEPLOY_HOST: 'repo@bob.jba.io'
-    SSH_KEY:
-      from_secret: ssh_key    
-  commands:
-    - mkdir $HOME/.ssh
-    - echo "$SSH_KEY" > $HOME/.ssh/id_ed25519
-    - chmod 600 $HOME/.ssh/id_ed25519
-    - apk add --no-cache openssh
-    - ssh-keyscan -H bob.jba.io > $HOME/.ssh/known_hosts  
-    - ssh-keyscan -H git.jba.io >> $HOME/.ssh/known_hosts     
-    - scp gorram.deb $DEPLOY_HOST:/home/repo/gorram.deb
-    - ssh $DEPLOY_HOST reprepro -b www/debian/ includedeb buster gorram.deb 
+#- name: deploy to repo
+#  image: alpine
+#  environment:
+#    DEPLOY_HOST: 'repo@bob.jba.io'
+#    SSH_KEY:
+#      from_secret: ssh_key    
+#  commands:
+#    - mkdir $HOME/.ssh
+#    - echo "$SSH_KEY" > $HOME/.ssh/id_ed25519
+#    - chmod 600 $HOME/.ssh/id_ed25519
+#    - apk add --no-cache openssh
+#    - ssh-keyscan -H bob.jba.io > $HOME/.ssh/known_hosts  
+#    - ssh-keyscan -H git.jba.io >> $HOME/.ssh/known_hosts     
+#    - scp gorram.deb $DEPLOY_HOST:/home/repo/gorram.deb
+#    - ssh $DEPLOY_HOST reprepro -b www/debian/ includedeb buster gorram.deb 
 
 - name: notify
   image: plugins/pushover
