Add comments to the default config files

--- a/client.yml.dist
+++ b/client.yml.dist
@@ -1,3 +1,12 @@
+# Name of the client
+## Must match the name of the YAML file on the server with the client's checks
 name: "clientname"
+
+# Shared secret between server and client
 secret_key: "omg123"
-server_address: "127.0.0.1:50000"
+
+# Full HTTP URL to the server
+server_address: "http://127.0.0.1:50000"
+
+# base64-encoded ed25519 private key of the client
+private_key: "6v7e9IUsxy5Rdli49mWX8glF0SCPSxr6zjfG_lN_NWo2405wsYYZzV3BZR3q3OXxDqxTyFAq-pt9LLnQxf9Rhg=="
