--- a/server.yml.dist
+++ b/server.yml.dist
@@ -1,11 +1,27 @@
+# Shared secret between the server and client
 secret_key: "omg123"
+
+# This is used to internally generate the client tokens after initial authentication
+## It must be 32 characters
+branca_key: "quaeNgaeph6ajaik1fei6EeNgidienge"
+
+# IP and port to listen on 
 listen_address: "127.0.0.1:50000"
+
+# How to alert. Currently either "log" or "pushover"
 alert_method: "log"
-tls_host: "server.example"
-debug: true
-domain: "https://server.example/gorram/"
+
+# If pushover, the required app and user keys must be setup
 #alert_method: "pushover"
-pushover: 
-    app_key: "app-key-from-pushover"
-    user_key: "user-key-from-pushover"
+#pushover: 
+#    app_key: "app-key-from-pushover"
+#    user_key: "user-key-from-pushover"
+
+# Debug logging
+debug: true
+
+# Full URL to the Gorram dashboard, if you plan on reverse proxying the dashboard
+## It is always listening on http://127.0.0.1:50001
+domain: "https://server.example/gorram/"
+
 
