--- a/.builds/linux.yml
+++ b/.builds/linux.yml
@@ -12,9 +12,9 @@ artifacts:
   - gorram/gorram.deb
 tasks:
   - setupgo: |
-      wget https://go.dev/dl/go1.20.6.linux-amd64.tar.gz
-      sudo rm -rf /usr/local/go && 
-      sudo tar -C /usr/local -xzf go1.20.6.linux-amd64.tar.gz
+      wget https://go.dev/dl/go1.21.0.linux-amd64.tar.gz
+      sudo rm -rf /usr/local/go
+      sudo tar -C /usr/local -xzf go1.21.0.linux-amd64.tar.gz
       export PATH=$PATH:/usr/local/go/bin
   - setup: |
       export PATH=$PATH:/usr/local/go/bin
