--- a/.builds/linux.yml
+++ b/.builds/linux.yml
@@ -14,7 +14,7 @@ artifacts:
   - gorram/gorram.deb
 tasks:
   - setupgo: |
-      wget https://go.dev/dl/go1.21.3.linux-amd64.tar.gz
+      wget -q https://go.dev/dl/go1.21.3.linux-amd64.tar.gz
       sudo rm -rf /usr/local/go
       sudo tar -C /usr/local -xzf go1.21.3.linux-amd64.tar.gz
       export PATH=$PATH:/usr/local/go/bin
