--- a/.builds/alpine.yml
+++ b/.builds/alpine.yml
@@ -2,17 +2,18 @@ image: alpine/3.17
 packages:
   - git
   - wget
+  - protoc
   - protobuf-c-compiler
 secrets:
-  - 1efbd7f2-d0b5-4cfc-8a0c-f1c12da95d4e
+  - 9ef6e07e-cae5-4ec0-b799-8898de1f742b
 sources:
-  - ssh://git@git.squanch.space/~aqtrans/gorram
+  - ssh://git@git.sr.ht/~aqtrans/gorram
 environment:
   project: gorram
-  remote: deploy@git.squanch.space
+  remote: deploy@dev.squanch.space
 tasks:
   - setupgo: |
-      wget https://go.dev/dl/go1.21.3.linux-amd64.tar.gz
+      wget -q https://go.dev/dl/go1.21.3.linux-amd64.tar.gz
       sudo rm -rf /usr/local/go
       sudo tar -C /usr/local -xzf go1.21.3.linux-amd64.tar.gz
       export PATH=$PATH:/usr/local/go/bin
